--- a/env.example
+++ b/env.example
@@ -1,25 +1,37 @@
-# Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+# Supabase 配置
+NEXT_PUBLIC_SUPABASE_URL=http://localhost:54321
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
-# Database Configuration
-DATABASE_URL=your_database_url
+# 数据库配置
+DATABASE_URL=postgresql://postgres:postgres@localhost:54322/postgres
 
-# Authentication
-NEXTAUTH_SECRET=your_nextauth_secret
-NEXTAUTH_URL=http://localhost:3000
-
-# Email Configuration (Optional)
-SMTP_HOST=your_smtp_host
-SMTP_PORT=587
-SMTP_USER=your_smtp_user
-SMTP_PASS=your_smtp_password
-
-# File Storage (Optional - Supabase Storage URL is auto-generated)
-# NEXT_PUBLIC_STORAGE_URL=https://your-project-ref.supabase.co/storage/v1
-
-# App Configuration
+# 应用配置
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_APP_NAME=企业管理系统
-NEXT_PUBLIC_APP_VERSION=1.0.0
-NODE_ENV=development 
+
+# 认证配置
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=your-nextauth-secret-here
+
+# 邮件配置 (可选)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+
+# 文件上传配置
+NEXT_PUBLIC_MAX_FILE_SIZE=52428800 # 50MB
+NEXT_PUBLIC_ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,application/pdf
+
+# 开发配置
+NODE_ENV=development
+NEXT_PUBLIC_DEBUG=true
+
+# 监控配置 (可选)
+SENTRY_DSN=your-sentry-dsn-here
+NEXT_PUBLIC_SENTRY_DSN=your-sentry-dsn-here
+
+# 第三方服务配置 (可选)
+GOOGLE_ANALYTICS_ID=your-ga-id-here
+NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=your-ga-id-here 
