Enhance Supabase configuration with new API settings, TLS options, and database migration scripts. Introduce password hashing functionality and remove outdated test data migration. Update environment example with NextAuth secret generation instruction.

--- a/env.example
+++ b/env.example
@@ -12,6 +12,7 @@ NEXT_PUBLIC_APP_NAME=企业管理系统
 
 # 认证配置
 NEXTAUTH_URL=http://localhost:3000
+# openssl rand -base64 32
 NEXTAUTH_SECRET=your-nextauth-secret-here
 
 # 邮件配置 (可选)
