Add custom email template for signup confirmation
- Introduced a new email template for confirming user sign-ups, including a subject and content path in the configuration file.
- Created a new HTML file for the confirmation email layout, providing a link for users to confirm their email address.

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -97,6 +97,11 @@ port = 54324
 # admin_email = "admin@email.com"
 # sender_name = "Admin"
 
+# 自定义邮箱模板配置
+[auth.email.template.confirmation]
+subject = "Confirm your signup"
+content_path = "./supabase/templates/confirmation.html"
+
 [storage]
 enabled = true
 # The maximum file size allowed (e.g. "5MB", "500KB").
