Update development server configuration in package.json
- Changed the development server port from the default to 7777 for better accessibility during local development.

--- a/apps/fe-ui/package.json
+++ b/apps/fe-ui/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --port 7777 --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 7777",
     "lint": "next lint"
   },
   "dependencies": {
